--- a/src/app/components/recetas/recetas.component.html
+++ b/src/app/components/recetas/recetas.component.html
@@ -1,27 +1,61 @@
-<section class="py-5">
-
+<section class="py-4">
     <div class="container">
-
-        <h1>Recetas</h1>
+        <h2>Recetas</h2>
         <div class="row">
-            <div class="col-4">
-                <mat-card class="example-card">
-                    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-                        alt="Photo of a Shiba Inu">
-                    <mat-card-content>
-                        <h2>Pizza napolitana</h2>
-                        <p>
-                            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
-                            Japan.
-                            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was
-                            originally
-                            bred for hunting.
-                        </p>
-                    </mat-card-content>
-                </mat-card>
+            <div class="col-3">
+                <h3>Filtros</h3>
+
+                <div class="form-group">
+                    <mat-form-field appearance="outline">
+                        <mat-label>Buscar</mat-label>
+                        <input matInput placeholder=" ¿Qué vas a concinar hoy?">
+                        <mat-icon matSuffix>search</mat-icon>
+
+                    </mat-form-field>
+                </div>
+
+                <div class="form-group">
+                    <mat-form-field appearance="outline">
+                        <mat-label>Dificultad</mat-label>
+                        <mat-select [formControl]="dificultades" multiple>
+                            <mat-option *ngFor="let dificultad of dificultadesList" [value]="dificultad">
+                                {{dificultad}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+
+                <div class="form-group">
+                    <mat-form-field appearance="outline">
+                        <mat-label>Porciones</mat-label>
+                        <mat-select [formControl]="porciones" multiple>
+                            <mat-option *ngFor="let porcion of porcionesList" [value]="porcion">
+                                {{porcion}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+
+
+
+
+
+
             </div>
+
+            <div class="col-9">
+                <div class="row">
+                    <div *ngFor="let receta of topRecetas" class="col-4 mb-4">
+                        <img class="img-fluid mb-3" src="http://placekitten.com/g/400/250" alt="">
+                        <h3 class="mb-2">Lorem ipsum dolor sit amet.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut dignissimos aperiam itaque at
+                            adipisci iusto vel aliquam esse asperiores eum!</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
+
+
     </div>
-
-
 </section>
