--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @import "~bootstrap/scss/reboot";
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/images";
 @import "./scss/reset";
 
 html,
