se crea el mock de recetas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
                     <button mat-button routerLink="/categorias">Categorías</button>
                     <button class="ml-auto" mat-stroked-button>
                         <mat-icon class="mr-2">account_circle</mat-icon>
-                        Login
+                        Ingresar
                     </button>
                 </div>
             </div>
