--- a/src/app/components/receta/receta.component.html
+++ b/src/app/components/receta/receta.component.html
@@ -1,1 +1,15 @@
-<p>receta works!</p>
+<section class="py-4">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <img class="img-fluid mb-3"
+                    [src]="receta.img != null ? './assets/recetas/' + receta.img : './assets/recetas/placeholder.jpg'"
+                    alt="{{receta.title}}">
+                <h1>{{ receta.title }}</h1>
+                <p>{{ receta.description }}</p>
+                <p>Dificultad: {{ receta.dificultad }}</p>
+                <p>Porciones: {{ receta.porciones }}</p>
+            </div>
+        </div>
+    </div>
+</section>
