--- a/src/app/components/recetas/recetas.component.html
+++ b/src/app/components/recetas/recetas.component.html
@@ -9,9 +9,8 @@
                 <div class="form-group">
                     <mat-form-field appearance="outline">
                         <mat-label>Buscar</mat-label>
-                        <input matInput placeholder=" ¿Qué vas a concinar hoy?">
+                        <input [formControl]="searchText" matInput placeholder="¿Qué vas a concinar hoy?">
                         <mat-icon matSuffix>search</mat-icon>
-
                     </mat-form-field>
                 </div>
 
@@ -45,13 +44,14 @@
             <div class="col-9">
                 <div class="row">
                     <div class="col-12">
-                        <mat-card *ngFor="let receta of recetasFiltradas" class="mb-3">
+                        <mat-card *ngFor="let receta of recetasFiltradas | searchFilter:searchText.value" class="mb-3">
 
                             <img class="img-fluid mr-3"
                                 [src]="receta.img != null ? './assets/recetas/' + receta.img : './assets/recetas/placeholder.jpg'"
-                                alt="{{receta.title}}" routerLink="/receta">
+                                alt="{{receta.title}}" [routerLink]="['/receta', receta.id]">
                             <div>
-                                <h3 class="card-title mb-2" routerLink="/receta">{{ receta.title }}</h3>
+                                <h3 class=" card-title mb-2" [routerLink]="['/receta', receta.id]">{{ receta.title }}
+                                </h3>
                                 <p class="card-description">{{ receta.description | comments }}</p>
 
                                 <div class="receta-detalles">
@@ -61,13 +61,10 @@
                             </div>
 
                         </mat-card>
-
                     </div>
                 </div>
             </div>
 
         </div>
-
-
     </div>
 </section>
