--- a/src/app/components/recetas/recetas.component.scss
+++ b/src/app/components/recetas/recetas.component.scss
@@ -7,6 +7,9 @@ mat-card {
     display: flex;
 }
 
+mat-card:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
 mat-card img {
     width: 140px;
     height: 140px;
