--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <section>
-    <img class="img-fluid" src="./assets/fondo-2.jpg" alt="">
+    <img class="img-fluid" src="./assets/fondo.jpg" alt="">
 </section>
 
 <section class="py-4">
