--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,8 @@
 @import "~bootstrap/scss/images";
 @import "./scss/reset";
 
+// @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+
 html,
 body {
     height: 100%;
