--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,12 +2,11 @@
     <div class="container">
         <div class="row">
             <div class="col d-flex">
-                <span class="mr-3">Cook App</span>
+                <span class="brand mr-3" routerLink="/">Cook App</span>
                 <div class="d-flex w-100">
-                    <button mat-button routerLink="/">Home</button>
                     <button mat-button routerLink="/recetas">Recetas</button>
                     <button mat-button routerLink="/categorias">Categorías</button>
-                    <button class="ml-auto" mat-stroked-button>
+                    <button class="ml-auto" mat-stroked-button routerLink="/login">
                         <mat-icon class="mr-2">account_circle</mat-icon>
                         Ingresar
                     </button>
