--- a/src/app/components/categorias/categorias.component.html
+++ b/src/app/components/categorias/categorias.component.html
@@ -1,1 +1,8 @@
-<p>categorias works!</p>
+<section class="py-4">
+    <div class="container">
+        <h2>Categorías</h2>
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+</section>
