--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,15 +2,20 @@
     <img class="img-fluid" src="./assets/fondo.jpg" alt="">
 </section>
 
-<section class="py-4">
+
+<section class="recetas py-4">
     <div class="container">
         <h2>Recetas populares</h2>
         <div class="row">
             <div *ngFor="let receta of topRecetas" class="col-4 mb-4">
-                <img class="img-fluid mb-3" src="http://placekitten.com/g/400/250" alt="">
-                <h3 class="mb-2">Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut dignissimos aperiam itaque at adipisci
-                    iusto vel aliquam esse asperiores eum!</p>
+                <img class="img-fluid mb-3"
+                    [src]="receta.img != null ? './assets/recetas/' + receta.img : './assets/recetas/placeholder.jpg'"
+                    alt="{{receta.title}}" [routerLink]="['/receta', receta.id]">
+
+                <h3 class=" mb-2" [routerLink]="['/receta', receta.id]">{{ receta.title }}
+                </h3>
+
+                <p>{{ receta.description | comments }}</p>
             </div>
         </div>
 
