--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,3 +2,18 @@
     background-color: #41444b;
     color: #ffffff;
 }
+
+.recetas {
+    img {
+        width: 100%;
+        max-height: 200px;
+        object-fit: cover;
+        cursor: pointer;
+    }
+
+    h3 {
+        font-size: 1.25rem;
+        font-weight: bold;
+        cursor: pointer;
+    }
+}
