--- a/src/app/components/receta/receta.component.html
+++ b/src/app/components/receta/receta.component.html
@@ -1,10 +1,12 @@
 <section class="py-4">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-8">
+            <div class="col-6">
                 <img class="img-fluid mb-3"
                     [src]="receta.img != null ? './assets/recetas/' + receta.img : './assets/recetas/placeholder.jpg'"
                     alt="{{receta.title}}">
+            </div>
+            <div class="col-6 py-4">
                 <h1>{{ receta.title }}</h1>
                 <p>{{ receta.description }}</p>
                 <p>Dificultad: {{ receta.dificultad }}</p>
