--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@
 @import "~bootstrap/scss/images";
 @import "./scss/reset";
 
-// @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "./scss/forms";
 
 html,
 body {
