--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,21 @@
 <mat-toolbar color="primary">
     <div class="container">
         <div class="row">
-            <div class="col d-flex">
+            <div class="col d-flex align-items-center">
                 <span class="brand mr-3" routerLink="/">Cook App</span>
                 <div class="d-flex w-100">
                     <button mat-button routerLink="/recetas">Recetas</button>
                     <button mat-button routerLink="/categorias">Categorías</button>
+
+                    <div class="search-form">
+                        <input type="text" placeholder="Buscar">
+                        <button mat-icon-button color="primary">
+                            <mat-icon>search</mat-icon>
+                        </button>
+                    </div>
+
+
+
                     <button class="ml-auto" mat-stroked-button routerLink="/login">
                         <mat-icon class="mr-2">account_circle</mat-icon>
                         Ingresar
