se re-estructura la app

--- a/src/app/modules/front/header/header.component.html
+++ b/src/app/modules/front/header/header.component.html
@@ -7,14 +7,12 @@
                     <button mat-button routerLink="/recetas">Recetas</button>
                     <button mat-button routerLink="/categorias">Categorías</button>
 
-                    <div class="search-form">
+                    <div class="search-form ml-3">
                         <input type="text" placeholder="Buscar">
                         <button mat-icon-button color="primary">
                             <mat-icon>search</mat-icon>
                         </button>
                     </div>
-
-
 
                     <button class="ml-auto" mat-stroked-button routerLink="/login">
                         <mat-icon class="mr-2">account_circle</mat-icon>
