se crea el perfil

--- a/src/app/modules/front/login/login.component.html
+++ b/src/app/modules/front/login/login.component.html
@@ -27,7 +27,7 @@
                     <mat-checkbox>Recordarme</mat-checkbox>
                 </div>
 
-                <button mat-flat-button color="primary" class="d-block w-100 p-1">Ingresar</button>
+                <button mat-flat-button color="primary" class="d-block w-100 p-1" routerLink="/panel">Ingresar</button>
 
                 <div class="py-3 text-center">
                     <span>¿Aún no tenés usuario? <a routerLink="/registro">Registrate</a></span>
