create receta done

--- a/src/app/modules/user-panel/components/sidebar/sidebar.component.html
+++ b/src/app/modules/user-panel/components/sidebar/sidebar.component.html
@@ -1,21 +1,17 @@
 <mat-list>
-    <mat-list-item>
-        <mat-icon color="accent" class="mr-3">face</mat-icon> Perfil
+    <mat-list-item routerLink="/panel/perfil" routerLinkActive="selected">
+        <mat-icon color="dark" class="mr-3">face</mat-icon> Perfil
     </mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item>
-        <mat-icon color="accent" class="mr-3">article</mat-icon> Mis Recetas
+    <mat-list-item routerLink="/panel/recetas" routerLinkActive="selected">
+        <mat-icon color="dark" class="mr-3">article</mat-icon> Mis Recetas
     </mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item>
-        <mat-icon color="accent" class="mr-3">group</mat-icon> Amigos
+    <mat-list-item routerLink="/panel/amigos" routerLinkActive="selected">
+        <mat-icon color="dark" class="mr-3">group</mat-icon> Amigos
     </mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item>
-        <mat-icon color="accent" class="mr-3">new_releases</mat-icon> Novedades
+    <mat-list-item routerLink="/panel/novedades" routerLinkActive="selected">
+        <mat-icon color="dark" class="mr-3">new_releases</mat-icon> Novedades
     </mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item>
+    <mat-list-item routerLink="/panel/configuracion" routerLinkActive="selected">
         <mat-icon color="dark" class="mr-3">settings</mat-icon> Configuración
     </mat-list-item>
 </mat-list>
