--- a/src/app/modules/user-panel/perfil/perfil.component.html
+++ b/src/app/modules/user-panel/perfil/perfil.component.html
@@ -1,6 +1,27 @@
 <section>
-    <h2>Perfil</h2>
+
     <div class="row">
-        <div class="col"></div>
+        <div class="col-8">
+            <h2>Perfil</h2>
+
+            <p> Carlos Perez </p>
+
+            <p>
+                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti autem totam! Dignissimos
+                    cumque alias consectetur mollitia, nulla sapiente dolore.</small>
+            </p>
+
+            <p>Amigos: 58</p>
+            <p>Recetas: 40</p>
+
+            <button mat-flat-button color="primary">Editar perfil</button>
+
+
+        </div>
+        <div class="col-4 text-center">
+            <img class="profile-image img-fluid rounded-circle"
+                src="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png"
+                alt="">
+        </div>
     </div>
 </section>
