--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,3 +2,5 @@ $link-color: #3f51b5;
 $link-hover-color: currentColor;
 $link-hover-decoration: none;
 $label-margin-bottom: 0;
+
+$primary-color: #00adb5;
