--- a/src/theme.scss
+++ b/src/theme.scss
@@ -36,7 +36,7 @@ $primary-palette: (
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap");
 
-$my-custom-primary: mat-palette($mat-amber);
+$my-custom-primary: mat-palette($primary-palette);
 $my-custom-accent: mat-palette($mat-pink, 100, 500, A100);
 $my-custom-warn: mat-palette($mat-lime);
 
@@ -54,4 +54,4 @@ $my-custom-theme: mat-light-theme($my-custom-primary, $my-custom-accent, $my-cus
 // @include mat-base-typography($custom-typography);
 // @include angular-material-typography($custom-typography);
 
-// @include angular-material-theme($my-custom-theme);
+@include angular-material-theme($my-custom-theme);
