editar receta done

--- a/src/app/modules/user-panel/receta-editar/receta-editar.component.html
+++ b/src/app/modules/user-panel/receta-editar/receta-editar.component.html
@@ -1,9 +1,9 @@
 <section>
-    <h2>Crear receta</h2>
+    <h2>Editar receta</h2>
     <div class="row">
         <div class="col-8">
 
-            <app-receta-form></app-receta-form>
+            <app-receta-form [id]="id"></app-receta-form>
 
         </div>
     </div>
