--- a/src/app/modules/user-panel/recetas/recetas.component.scss
+++ b/src/app/modules/user-panel/recetas/recetas.component.scss
@@ -1,3 +1,16 @@
 .example-header-image {
     background-size: cover;
 }
+
+mat-card {
+    min-height: 90px;
+    cursor: pointer;
+}
+
+mat-card-title {
+    padding: 0.25rem 0;
+    width: 250px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
