--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/images";
+@import "~bootstrap/scss/card";
 @import "./scss/reset";
 
 @import "./scss/forms";
