--- a/src/app/modules/user-panel/components/receta-form/receta-form.component.html
+++ b/src/app/modules/user-panel/components/receta-form/receta-form.component.html
@@ -1,34 +1,69 @@
-<form [formGroup]="recetaForm" (ngSubmit)="onSubmit()">
-    <mat-form-field appearance="outline">
-        <mat-label>Título</mat-label>
-        <input formControlName="title" matInput placeholder="¿Que vas a hacer de rico?">
+<form [formGroup]="recetaForm" (ngSubmit)="onSubmit($event)">
+    <div class="row">
+        <div class="col-8">
+            <mat-form-field appearance="outline">
+                <mat-label>Título</mat-label>
+                <input formControlName="title" matInput placeholder="¿Que vas a hacer de rico?" autofocus>
+            </mat-form-field>
 
-    </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Descripción</mat-label>
+                <textarea formControlName="description" id="description" matInput #description></textarea>
+            </mat-form-field>
 
-    <mat-form-field appearance="outline">
-        <mat-label>Descripción</mat-label>
-        <textarea formControlName="description" matInput></textarea>
-    </mat-form-field>
+            <div class="mb-3">
+                Ingredientes
+            </div>
 
-    <div class="form-control">
-        <label>Dificultad</label>
-        <mat-radio-group aria-label="Select an option" color="primary" formControlName="dificultad">
-            <mat-radio-button class="example-radio-button" *ngFor="let dificultad of dificultadList"
-                [value]="dificultad">
-                {{ dificultad }}
-            </mat-radio-button>
-        </mat-radio-group>
+            <div id="form-ingredientes" *ngFor="let ingrediente of t.controls; let i = index">
+                <div [formGroup]="ingrediente">
+                    <div class="row">
+                        <div class="col-11">
+                            <mat-form-field appearance="outline">
+                                <!-- <mat-label>Ingrediente</mat-label> -->
+                                <input formControlName="ingrediente" matInput
+                                    [placeholder]="i == 0 ? '🍰 Harina 000 1kg': i == 1 ? '🍅 Salsa de tomates 250g' : ''"
+                                    id="i-{{i}}" (keyup.enter)="insertItem(i)">
+                            </mat-form-field>
+                        </div>
+                        <div class="col-1 p-0 pt-1">
+                            <button mat-icon-button color="warn" type="button" (click)="removeItem(i)">
+                                <mat-icon>clear</mat-icon>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <button mat-flat-button type="button" color="primary" (click)="addIngrediente()" class="mt-3">Agregar
+                ingrediente
+            </button>
+
+        </div>
+        <div class="col-4">
+            <mat-card>
+                <div class="form-control">
+                    <label>Porciones</label>
+                    <mat-radio-group aria-label="Select an option" color="primary" formControlName="porciones">
+                        <mat-radio-button class="d-block mb-2" *ngFor="let porcion of porcionesList" [value]="porcion">
+                            {{ porcion }}
+                        </mat-radio-button>
+                    </mat-radio-group>
+                </div>
+                <div class="form-control">
+                    <label>Dificultad</label>
+                    <mat-radio-group aria-label="Select an option" color="primary" formControlName="dificultad">
+                        <mat-radio-button *ngFor="let dificultad of dificultadList" [value]="dificultad">
+                            {{ dificultad }}
+                        </mat-radio-button>
+                    </mat-radio-group>
+                </div>
+                <button mat-flat-button color="primary" type="submit" [disabled]="!recetaForm.valid"
+                    class="w-100">{{ id ? 'Guardar cambios' : 'Crear receta'}}
+                </button>
+            </mat-card>
+
+        </div>
     </div>
 
-    <div class="form-control">
-        <label>Porciones</label>
-        <mat-radio-group aria-label="Select an option" color="primary" formControlName="porciones">
-            <mat-radio-button class="example-radio-button" *ngFor="let porcion of porcionesList" [value]="porcion">
-                {{ porcion }}
-            </mat-radio-button>
-        </mat-radio-group>
-    </div>
-
-    <button mat-flat-button color="primary" type="submit" [disabled]="!recetaForm.valid">Crear
-        receta</button>
 </form>
