--- a/src/app/modules/user-panel/components/receta-form/receta-form.component.scss
+++ b/src/app/modules/user-panel/components/receta-form/receta-form.component.scss
@@ -1,8 +1,27 @@
-.mat-radio-button ~ .mat-radio-button {
-    margin-left: 16px;
+.mat-card {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.mat-radio-group {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.mat-radio-button {
+    margin-bottom: 0.5rem;
 }
 
 label {
     display: block;
     margin-bottom: 1rem;
+}
+
+button {
+    flex: 1 1 100%;
+}
+
+.form-control:first-child {
+    margin-right: 2rem;
 }
