--- a/src/app/modules/user-panel/recetas/recetas.component.scss
+++ b/src/app/modules/user-panel/recetas/recetas.component.scss
@@ -5,6 +5,22 @@
 mat-card {
     min-height: 90px;
     cursor: pointer;
+    position: relative;
+
+    button {
+        opacity: 0;
+        position: absolute;
+        top: 0.25rem;
+        right: 0.25rem;
+        transition: opacity 200ms;
+    }
+
+    &:hover {
+        button {
+            opacity: 1;
+            transition: opacity 200ms;
+        }
+    }
 }
 
 mat-card-title {
