--- a/src/app/modules/front/home/home.component.html
+++ b/src/app/modules/front/home/home.component.html
@@ -2,14 +2,12 @@
   <img class="img-fluid" src="./assets/fondo.jpg" alt="">
 </section>
 
-
 <section class="recetas py-4">
   <div class="container">
     <h2>Recetas populares</h2>
     <div class="row">
       <div *ngFor="let receta of topRecetas" class="col-4 mb-4">
-        <img class="img-fluid mb-3"
-          [src]="receta.img != null ? './assets/recetas/' + receta.img : './assets/recetas/placeholder.jpg'"
+        <img class="img-fluid mb-3" [src]="receta.img != null ? receta.img : './assets/recetas/placeholder.jpg'"
           alt="{{receta.title}}" [routerLink]="['/receta', receta.id]">
 
         <h3 class=" mb-2" [routerLink]="['/receta', receta.id]">{{ receta.title }}
@@ -18,10 +16,8 @@
         <p>{{ receta.description | comments }}</p>
       </div>
     </div>
-
     <div class="row d-flex justify-content-center py-2">
       <button mat-flat-button color="primary" routerLink="recetas">Ver todas las recetas</button>
-
     </div>
   </div>
 </section>
