--- a/src/app/modules/front/receta/receta.component.html
+++ b/src/app/modules/front/receta/receta.component.html
@@ -3,7 +3,7 @@
         <div class="row justify-content-center">
             <div class="col-6">
                 <img class="img-fluid mb-3"
-                    [src]="receta.img != null ? './assets/recetas/' + receta.img : './assets/recetas/placeholder.jpg'"
+                    [src]="receta.img != null ? receta.img : './assets/recetas/placeholder.jpg'"
                     alt="{{receta.title}}">
             </div>
             <div class="col-6 py-4">
