--- a/src/app/modules/user-panel/components/receta-form/receta-form.component.scss
+++ b/src/app/modules/user-panel/components/receta-form/receta-form.component.scss
@@ -22,8 +22,9 @@ button {
     flex: 1 1 100%;
 }
 
-.form-control:first-child {
-    margin-right: 2rem;
+.form-control {
+    // margin-right: 2rem;
+    width: 100%;
 }
 
 #form-ingredientes {
@@ -41,4 +42,47 @@ button {
 textarea.mat-input-element {
     line-height: 150%;
     padding-right: 0.25rem;
+}
+
+.form-img {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    width: 100%;
+    border: 2px dashed rgba(0, 0, 0, 0.125);
+
+    &.uploaded {
+        border: none;
+    }
+
+    input {
+        cursor: pointer;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        z-index: 2;
+    }
+
+    span {
+        color: rgba(0, 0, 0, 0.5);
+    }
+
+    img {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+    }
+
+    button {
+        z-index: 3;
+    }
 }
